# ASCII_Tree_2

./: .gitignore  CMakeLists.txt  README.md  branch_pool.h  canvas.cpp  canvas.h  forest.cpp  forest.h  main  main.cpp  terminal_abstractions.cpp  terminal_abstractions.h  tree.cpp  tree.h
Forest/: CMakeLists.txt  forest.cpp  forest.h  tree.cpp  tree.h
Forest/segments/: segment.h  twig_segments.cpp
segments/: arm_segments.cpp  arm_segments.h  segment.cpp  segment.h  segment_base.cpp  segment_base.h  segment_trunk.cpp  segment_trunk.h  trunk_segments.cpp  trunk_segments.h  twig_segments.cpp  twig_segments.h
