add_library(forest forest.h terminal_abstractions.h
                    forest.cpp
                    tree.cpp
                    terminal_abstractions.cpp
                    segments/segment.cpp
                    segments/trunk_segments.cpp
                    segments/arm_segments.cpp
                    segments/twig_segments.cpp)

